<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Disaster Response</string>

    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
  if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="app_tittle">Disaster Response</string>

    <string name="near_the">Near the</string>

    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_earthquakes">No earthquakes found.</string>
    <string name="no_internet_connection">No Internet Connection.</string>

    <!-- Category name for topAttraction [CHAR LIMIT=20] -->
    <string name="category_earthquake">EarthQuakes</string>
    <string name="category_statistics">Statistics</string>
    <string name="category_floods">Floods</string>
    <string name="category_thunder_storm">Thunder Storm</string>
    <string name="category_others">Others</string>
    <string name="hello_blank_fragment">heloo</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <string name="delete_option">Delete All Earthquake</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Disaster Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">3</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By(Earthquake)</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_recent_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- Strings For minimum severity Preference [CHAR LIMIT=30] -->
    <string name="settings_min_severity_level_label">Minimum Severity Level(Flood)</string>
    <string name="settings_min_severity_level_key" translatable="false">min_severity</string>
    <string name="settings_min_severity_level_default" translatable="false">@string/settings_min_severity_level_3_value</string>

    <!-- Label for minimum severity level option-->
    <string name="settings_min_severity_level_1_label">LEVEL-1(Severe Flood Warning)</string>
    <string name="settings_min_severity_level_1_value" translatable="false">1</string>

    <!-- Label for minimum severity level option-->
    <string name="settings_min_severity_level_2_label">LEVEL-2(Flood Warning)</string>
    <string name="settings_min_severity_level_2_value" translatable="false">2</string>

    <!-- Label for minimum severity level option-->
    <string name="settings_min_severity_level_3_label">LEVEL-3(Flood Alert)</string>
    <string name="settings_min_severity_level_3_value" translatable="false">3</string>

    <!-- Label for minimum severity level option-->
    <string name="settings_min_severity_level_4_label">LEVEL-4(Warning no Longer in Force)</string>
    <string name="settings_min_severity_level_4_value" translatable="false">4</string>


    <!-- Strings For Maximum result Preference [CHAR LIMIT=30] -->
    <string name="settings_max_result_label">Maximum Result</string>
    <string name="settings_max_result_key" translatable="false">max_result</string>
    <string name="settings_max_result_default" translatable="false">20</string>

    <!-- Label for perceived strength value [CHAR LIMIT=40] -->
    <string name="perceived_strength">Perceived Strength</string>

    <!-- Number of people who reported perceived strength for an earthquake [CHAR LIMIT=NONE] -->
    <string name="num_people_felt_it"><xliff:g example="10" id="number">%s</xliff:g> people felt it</string>

    <string name="no_floods">No Flood Found</string>

    <string name="title_activity_catagory">Earthquake Details</string>

    <string name="title_activity_flood_details">Flood Details</string>

    <string name="facebook_app_id">1790487541257003</string>

    <!-- the usgs website request url -->
    <string name="usgs_request_url">https://earthquake.usgs.gov/fdsnws/event/1/query</string>
    <string name="usgs_url">https://earthquake.usgs.gov/earthquakes/map/"</string>






    <string name="delete_all_earthquake_dialog_message">Delete all Earthquakes ?</string>
    <string name="delete_this_Location_dialog_msg">Delete this Location ?</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="database_empty_state">Data storage is empty.Did you save all earthquakes?</string>
    <string name="about_us">About</string>
    <string name="version">Version 1.0</string>
    <string name="support">Support - Udacity (ud843-QuakeReport)\nhttps://github.com/udacity/ud843-QuakeReport</string>
    <string name="uda_quake_report" translatable="false" >https://github.com/udacity/ud843-QuakeReport</string>
    <string name="currentDeveloper">Current Developer</string>
    <string name="currentDeveloperName">Apurba Biswas\napurba10024@gmail.com</string>
    <string name="currentDeveloperEmail">apurba10024@gmail.com</string>
    <string name="projectType">Project Type and info</string>
    <string name="projectTypeDetails">B.s.c 4th year final project \n BUBT,Mirpur,Dhaka,Bangladesh</string>
    <string name="bubtWebsiteHomePage">https://www.bubt.edu.bd/</string>
    <string name="projectSuperVisor">Project Supervisor</string>
    <string name="projectSuperName">Md. Mahbubur Rahman\nAssistant Professor, BUBT\nmahabub.cse.buet@gmail.com</string>
    <string name="projectSuperEmail">mahabub.cse.buet@gmail.com</string>
    <string name="developersDetailsLabel">Developers Details</string>
    <string name="firstDeveloperDetails">Apurba Biswas\nIntake: 23,Dept of CSE,BUBT\napurba10024@gmail.com</string>
    <string name="firstDeveloperEmail">apurba10024@gmail.com</string>
    <string name="firstDeveloperFacebook">https://www.facebook.com/Apurba.000.Biswas</string>
    <string name="secondDeveloperDetails">Faysal Ahmed\nIntake: 27,Dept of CSE,BUBT\nfaysal.jabir@outlook.com</string>
    <string name="secondDeveloperEmail">faysal.jabir@outlook.com</string>
    <string name="secondDeveloperFacebook">https://www.facebook.com/jabir.faysal</string>
    <string name="messageForSourceCode">Its an open source project.If you want to contribute, tap on the
        following button to see the source code </string>
    <string name="sourceCodeLink">https://github.com/Apurba000Biswas/Disaster-Response</string>
    <string name="sourceCodeLabel">source code</string>
</resources>
